// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox as checked 1`] = `
.c0 {
  position: relative;
  line-height: 1.5rem;
  min-height: 1.5rem;
}

.c2 {
  box-sizing: border-box;
  padding: 0;
  position: absolute;
  z-index: -1;
  opacity: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c5 {
  margin-left: 8px;
  font-size: 1rem;
  color: #5a6169;
  opacity: 1;
}

.c4 {
  fill: none;
  stroke: transparent;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  stroke-width: 3px;
  -webkit-transition: -webkit-transform 250ms cubic-bezier(.27,.01,.38,1.06),border 250ms cubic-bezier(.27,.01,.38,1.06),-webkit-transform 250ms cubic-bezier(.27,.01,.38,1.06);
  -webkit-transition: transform 250ms cubic-bezier(.27,.01,.38,1.06),border 250ms cubic-bezier(.27,.01,.38,1.06),-webkit-transform 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: transform 250ms cubic-bezier(.27,.01,.38,1.06),border 250ms cubic-bezier(.27,.01,.38,1.06),-webkit-transform 250ms cubic-bezier(.27,.01,.38,1.06);
  -webkit-transition-delay: .1s;
  transition-delay: .1s;
}

.c3 {
  display: inline-block;
  width: 1.125rem;
  height: 1.125rem;
  border: 1px solid #e1e5eb;
  border-radius: 2px;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  box-shadow: none;
  background-color: white;
  text-align: center;
}

input:checked + .c3 {
  background-color: #5a6169;
}

input:checked + .c3 svg {
  stroke: white;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

<div
  class="c0"
  label=""
>
  <label
    class="c1"
    label=""
  >
    <input
      checked=""
      class="c2"
      label=""
      type="checkbox"
    />
    <div
      class="c3"
      label=""
    >
      <svg
        class="c4"
        viewBox="0 0 24 24"
      >
        <polyline
          points="20 6 9 17 4 12"
        />
      </svg>
    </div>
    <span
      class="c5"
      label=""
    />
  </label>
</div>
`;

exports[`Checkbox common 1`] = `
.c0 {
  position: relative;
  line-height: 1.5rem;
  min-height: 1.5rem;
}

.c2 {
  box-sizing: border-box;
  padding: 0;
  position: absolute;
  z-index: -1;
  opacity: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c5 {
  margin-left: 8px;
  font-size: 1rem;
  color: #5a6169;
  opacity: 1;
}

.c4 {
  fill: none;
  stroke: transparent;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  stroke-width: 3px;
  -webkit-transition: -webkit-transform 250ms cubic-bezier(.27,.01,.38,1.06),border 250ms cubic-bezier(.27,.01,.38,1.06),-webkit-transform 250ms cubic-bezier(.27,.01,.38,1.06);
  -webkit-transition: transform 250ms cubic-bezier(.27,.01,.38,1.06),border 250ms cubic-bezier(.27,.01,.38,1.06),-webkit-transform 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: transform 250ms cubic-bezier(.27,.01,.38,1.06),border 250ms cubic-bezier(.27,.01,.38,1.06),-webkit-transform 250ms cubic-bezier(.27,.01,.38,1.06);
  -webkit-transition-delay: .1s;
  transition-delay: .1s;
}

.c3 {
  display: inline-block;
  width: 1.125rem;
  height: 1.125rem;
  border: 1px solid #e1e5eb;
  border-radius: 2px;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  box-shadow: none;
  background-color: white;
  text-align: center;
}

input:checked + .c3 {
  background-color: #5a6169;
}

input:checked + .c3 svg {
  stroke: white;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

<div
  class="c0"
  label=""
>
  <label
    class="c1"
    label=""
  >
    <input
      class="c2"
      label=""
      type="checkbox"
    />
    <div
      class="c3"
      label=""
    >
      <svg
        class="c4"
        viewBox="0 0 24 24"
      >
        <polyline
          points="20 6 9 17 4 12"
        />
      </svg>
    </div>
    <span
      class="c5"
      label=""
    />
  </label>
</div>
`;

exports[`Checkbox with disabled 1`] = `
.c0 {
  position: relative;
  line-height: 1.5rem;
  min-height: 1.5rem;
}

.c2 {
  box-sizing: border-box;
  padding: 0;
  position: absolute;
  z-index: -1;
  opacity: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
}

.c5 {
  margin-left: 8px;
  font-size: 1rem;
  color: #5a6169;
  opacity: 0.7;
}

.c4 {
  fill: none;
  stroke: transparent;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  stroke-width: 3px;
  -webkit-transition: -webkit-transform 250ms cubic-bezier(.27,.01,.38,1.06),border 250ms cubic-bezier(.27,.01,.38,1.06),-webkit-transform 250ms cubic-bezier(.27,.01,.38,1.06);
  -webkit-transition: transform 250ms cubic-bezier(.27,.01,.38,1.06),border 250ms cubic-bezier(.27,.01,.38,1.06),-webkit-transform 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: transform 250ms cubic-bezier(.27,.01,.38,1.06),border 250ms cubic-bezier(.27,.01,.38,1.06),-webkit-transform 250ms cubic-bezier(.27,.01,.38,1.06);
  -webkit-transition-delay: .1s;
  transition-delay: .1s;
}

.c3 {
  display: inline-block;
  width: 1.125rem;
  height: 1.125rem;
  border: 1px solid #e1e5eb;
  border-radius: 2px;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  box-shadow: none;
  background-color: white;
  text-align: center;
}

input:checked + .c3 {
  background-color: #5a6169;
}

input:checked + .c3 svg {
  stroke: white;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

<div
  class="c0"
  disabled=""
  label=""
>
  <label
    class="c1"
    disabled=""
    label=""
  >
    <input
      class="c2"
      disabled=""
      label=""
      type="checkbox"
    />
    <div
      class="c3"
      disabled=""
      label=""
    >
      <svg
        class="c4"
        viewBox="0 0 24 24"
      >
        <polyline
          points="20 6 9 17 4 12"
        />
      </svg>
    </div>
    <span
      class="c5"
      disabled=""
      label=""
    />
  </label>
</div>
`;
